# pyllm-apps

./: .gitignore  LangChain Architecture and Flows.mmd  README.md  chat_history.json  pyproject.toml
src/apps/: chain.py  main.py
src/apps/configs/: env_configs.py  env_configs.pyi
