[project]
name = "apps"
version = "0.1.0"
description = ""
authors = [
    {name = "Amitesh Rai",email = "amiteshrai@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab (>=4.3.6,<5.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "openai (>=1.68.2,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pyaml (>=25.1.0,<26.0.0)",
    "panda (>=0.3.1,<0.4.0)"
]

[tool.poetry]
packages = [{include = "apps", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
